# lethal-company-mod-tinder

./: .dockerignore  .env.template  .gitignore  Cargo.toml  Dockerfile  build.sh  docker-compose.yml  pterodactyl-install.sh
.github/workflows/: pipeline.yml
migrations/: 01_initial.sql  02_last_updated.sql  03_ratings.sql  04_users.sql  05_import_privileges.sql  06_import_date_timestamp.sql
migrations/01-initial/: up.sql
migrations/02-last-updated/: up.sql
migrations/03-ratings/: up.sql
src/: db.rs  env.rs  main.rs  middlewares.rs  mods.rs  services.rs
src/fixtures/: mods.sql  user_ratings.sql  users.sql
src/middlewares/: privilege_validator.rs  token_validator.rs
src/requests/: create_user.rest  get_mods.rest  login.rest
src/services/: import_mods.rs  ratings.rs  settings.rs  users.rs
static/: 404.html  create_user.html  error.html  import_in_progress.html  import_mods.html  index.css  login.html  login_error.html  login_failed.html  login_ok.html  logout.html  not_logged_in.html
templates/: create_user.html  import_mods.html  index.html  login.html  rated_mods.html  rating.html  settings.html
