[package]
name = "lethal-company-mod-tinder"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.10.2"
curl = "0.4.47"
include_dir = "0.7.4"
rusqlite = { version = "=0.32.1", features = ["uuid"] }
rusqlite_migration = { version = "=1.3.1", features = ["from-directory"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tera = "1.20.0"
tera-hot-reload = "0.2.4"
time = { version = "0.3.40", features = ["serde-well-known"] }
